# caldera-sovereign-chain

./: .gitignore  Cargo.toml  Dockerfile  GETTING_STARTED_WITH_HYPERLANE.md  Makefile  README.md  constants.toml  constants.toml.template
.github/workflows/: rust.yml
configs/celestia/: genesis.json  rollup.toml
configs/mock/: genesis.json  rollup.toml
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/provers/sp1/guest-celestia/: Cargo.toml
crates/provers/sp1/guest-mock/: Cargo.toml
crates/rollup/: Cargo.toml
crates/rollup/src/: rollup.rs
crates/rollup/tests/: test_helpers.rs
crates/stf/: Cargo.toml
crates/stf/src/: authentication.rs  delegation.rs  runtime.rs
crates/stf/stf-declaration/: Cargo.toml
crates/stf/stf-declaration/src/: lib.rs
examples/starter-js/: package-lock.json  package.json
integrations/hyperlane/: docker-compose.hyp-evm.yml
scripts/acceptance-test/: Cargo.toml  genesis.json  rollup_config.toml
scripts/acceptance-test/src/: lib.rs  main.rs
scripts/soak-test/: Cargo.toml
scripts/soak-test/src/: main.rs
