[workspace]

resolver = "2"

members = [
  "crates/rollup",
  "crates/stf",
  "crates/stf/stf-declaration",
  "examples/value-setter",
  "scripts/soak-test",
]
default-members = ["crates/rollup"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Sovereign Permissionless Commercial License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.88"

[workspace.dependencies]
sov-address = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a", features = [
  "evm",
] }
sov-accounts = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-api-spec = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-attester-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-chain-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-bank = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-blob-storage = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-paymaster = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-capabilities = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-celestia-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-cli = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-db = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-hyperlane-integration = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a", features = [
  "evm",
] }
sov-kernels = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-ledger-apis = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-mock-da = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-mock-zkvm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-modules-rollup-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-modules-stf-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-uniqueness = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-operator-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-prover-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-revenue-share = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-risc0-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-sp1-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-sequencer = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-sequencer-registry = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-soak-testing = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-stf-runner = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-test-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-rollup-apis = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-universal-wallet = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-zkvm-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-build = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-evm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
sov-ethereum = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bdbc4a89171b32c02dddfd83f194e6d4923e597a" }
stf-starter = { path = "./crates/stf", default-features = false }
stf-starter-declaration = { path = "./crates/stf/stf-declaration", default-features = false }
value-setter = { path = "./examples/value-setter" }
strum = { version = "0.26.3", features = ["derive"] }

axum = { version = "0.7.9", default-features = false }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

prometheus_exporter = "0.8.5"
sha2 = { version = "0.10.6", default-features = false }

schemars = { version = "0.8.21", features = ["derive"] }
anyhow = { version = "1.0.95" }
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "1", features = ["rc", "bytes"] }
tracing = { version = "0.1.40", default-features = false }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
tempfile = "3.20"
jsonrpsee = { version = "0.25", features = ["jsonrpsee-types"] }

risc0-build = "2.1"
