[workspace]

resolver = "2"

members = [
  "crates/rollup",
  "crates/stf",
  "crates/stf/stf-declaration",
  "examples/value-setter",
  "scripts/soak-test",
]
default-members = ["crates/rollup"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Sovereign Permissionless Commercial License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.88"

[workspace.dependencies]
sov-address = { path = "../sovereign-sdk/crates/module-system/sov-address", features = [
  "evm",
] }
sov-accounts = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-accounts" }
sov-api-spec = { path = "../sovereign-sdk/crates/full-node/sov-api-spec" }
sov-attester-incentives = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-attester-incentives" }
sov-chain-state = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-chain-state" }
sov-bank = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-bank" }
sov-blob-storage = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-blob-storage" }
sov-paymaster = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-paymaster" }
sov-capabilities = { path = "../sovereign-sdk/crates/module-system/sov-capabilities" }
sov-celestia-adapter = { path = "../sovereign-sdk/crates/adapters/celestia" }
sov-cli = { path = "../sovereign-sdk/crates/module-system/sov-cli" }
sov-db = { path = "../sovereign-sdk/crates/full-node/sov-db" }
sov-hyperlane-integration = { path = "../sovereign-sdk/crates/module-system/hyperlane", features = [
  "evm",
] }
sov-kernels = { path = "../sovereign-sdk/crates/module-system/sov-kernels" }
sov-ledger-apis = { path = "../sovereign-sdk/crates/full-node/sov-ledger-apis" }
sov-mock-da = { path = "../sovereign-sdk/crates/adapters/mock-da" }
sov-mock-zkvm = { path = "../sovereign-sdk/crates/adapters/mock-zkvm" }
sov-modules-api = { path = "../sovereign-sdk/crates/module-system/sov-modules-api" }
sov-modules-rollup-blueprint = { path = "../sovereign-sdk/crates/module-system/sov-modules-rollup-blueprint" }
sov-modules-stf-blueprint = { path = "../sovereign-sdk/crates/module-system/sov-modules-stf-blueprint" }
sov-uniqueness = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-uniqueness" }
sov-operator-incentives = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-operator-incentives" }
sov-prover-incentives = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-prover-incentives" }
sov-revenue-share = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-revenue-share" }
sov-risc0-adapter = { path = "../sovereign-sdk/crates/adapters/risc0" }
sov-sp1-adapter = { path = "../sovereign-sdk/crates/adapters/sp1" }
sov-rollup-interface = { path = "../sovereign-sdk/crates/rollup-interface" }
sov-sequencer = { path = "../sovereign-sdk/crates/full-node/sov-sequencer" }
sov-sequencer-registry = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-sequencer-registry" }
sov-soak-testing = { path = "../sovereign-sdk/examples/demo-rollup/sov-soak-testing" }
sov-state = { path = "../sovereign-sdk/crates/module-system/sov-state" }
sov-stf-runner = { path = "../sovereign-sdk/crates/full-node/sov-stf-runner" }
sov-test-utils = { path = "../sovereign-sdk/crates/module-system/sov-test-utils" }
sov-rollup-apis = { path = "../sovereign-sdk/crates/full-node/sov-rollup-apis" }
sov-universal-wallet = { path = "../sovereign-sdk/crates/universal-wallet/schema" }
sov-zkvm-utils = { path = "../sovereign-sdk/crates/utils/sov-zkvm-utils" }
sov-build = { path = "../sovereign-sdk/crates/utils/sov-build" }
sov-evm = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-evm" }
sov-ethereum = { path = "../sovereign-sdk/crates/full-node/sov-ethereum" }
stf-starter = { path = "./crates/stf", default-features = false }
stf-starter-declaration = { path = "./crates/stf/stf-declaration", default-features = false }
value-setter = { path = "./examples/value-setter" }
strum = { version = "0.26.3", features = ["derive"] }

axum = { version = "0.7.9", default-features = false }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

prometheus_exporter = "0.8.5"
sha2 = { version = "0.10.6", default-features = false }

schemars = { version = "0.8.21", features = ["derive"] }
anyhow = { version = "1.0.95" }
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "1", features = ["rc", "bytes"] }
tracing = { version = "0.1.40", default-features = false }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
tempfile = "3.20"
jsonrpsee = { version = "0.25", features = ["jsonrpsee-types"] }

risc0-build = "2.1"
